# gardencontroller

./: .env.example  .gitignore  README.md  mkdocs.yml
.github/workflows/: docs.yml  firmware-release.yml  ingest-image.yml  mcp-image.yml  rover-firmware.yml
docs/: calibration.md  index.md
firmware/garden-node/: README.md  arduino_secrets.h.example  config.h  display.cpp  display.h  display_render.h  garden-node.ino  net.cpp  net.h  ota.cpp  ota.h  sensors.cpp  sensors.h  telemetry.cpp  telemetry.h
firmware/rover-node-rs/: README.md
firmware/rover-node-rs/rover-firmware/: .gitignore  Cargo.toml  partitions.csv  sdkconfig.defaults
firmware/rover-node-rs/rover-firmware/.cargo/: config.toml
firmware/rover-node-rs/rover-firmware/src/: camera.rs  cloud.rs  config.rs  main.rs  ota.rs  wifi.rs
firmware/soil-cal/: soil-cal.ino
ingest/: Dockerfile  README.md  requirements.txt
ingest/app/: main.py  mapping.py
ingest/tests/: test_mapping.py
irrigation/: README.md  RUNBOOK.md  SKILL.md  garden.config.example.json  garden.py  garden_core.py  pytest.ini
irrigation/mcp/: .dockerignore  Dockerfile  config.example.json  gateway.py  server.py
irrigation/tests/: conftest.py  test_caps.py  test_cli.py  test_clients.py  test_plan.py  test_smoke.py  test_state.py  test_tuya_sign.py  test_water.py
local/: docker-compose.yml  prometheus.yml
local/dashboards/: garden-overview.json
scripts/: flash.sh  gen-arduino-secrets.sh  release-firmware.sh  simulate.py  verify.sh
tools/board-tui/: README.md  board_tui.py  frames.py  render.py  requirements.txt  sources.py
(+32 files in other folders)
